# MagicCompare

./: CMakeLists.txt  README.md
src/: magic_compare.hpp
test/: test_main.cpp
